--- a/css/securly.css
+++ b/css/securly.css
@@ -1,5 +1,6 @@
-html, body, section { 
+body, html {
   height: 100%;
+  margin: 0;
 }
 
 .navbar{
@@ -35,21 +36,35 @@ border-radius: 25px !important;
   margin-bottom: 10px;
   
 }
-
-.row{
-
-  padding-left: 40px;
-  
+h2{
+  padding-top: 30px;
+  color: white;
+  font-size: 3.1vw;
+  font-family: 'Roboto Slab', serif;
 }
 
 .intro{
+
+padding-top: 30px;
+color: black;
+font-size: 3.1vw;
+font-family: 'Roboto Slab', serif;
+}
+.maintain{
+  
+    padding-top: 130px;
+    color: black;
+    font-size: 3.1vw;
+    font-family: 'Roboto Slab', serif;  
+}
+.kids-device{
   color: white;
-  font-size: 2.5vw;
-  font-family: 'Roboto Slab', serif;
+  font-size: 1.5vw;
 }
 .header{
   padding-top: 50px;
   padding-left: 70px;
+  padding-bottom: 150px;
 }
 
 .login{
@@ -61,18 +76,44 @@ border-radius: 25px !important;
 }
 .view{  
 position: absolute;
-  padding-top: 50px;
+
+  padding-top: 10px;
   max-height:500px;;
   width: 40%;
   margin-left: 500px;
 }
 
+.home-secure{
+  position: absolute;
 
+  padding-top: 60px;
+  max-height:500px;;
+  width: 40%;
+  margin-left: 450px;
+}
 
+.security{
+  padding-top:100px;
+  padding-bottom: 180px;
+}
+
+.app{
+  height: 20%;
+}
 .btns{
   border-radius: 25px !important;
   color: black !important;
   background-color: white !important;
+}
+
+.try{
+  opacity: .6;
+  border-radius: 25px ;
+  background-color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-bottom: 60px;
+
 }
 .mobile-header{
 
@@ -84,21 +125,76 @@ position: absolute;
   font-size: 40px;
   
 }
-header{
-  padding-bottom: 135px;
+.header{
+  padding-bottom: 160px;
   background-color: rgb(116, 113, 113);
  
  
 }
-
- .home{
- z-index: 0;
- position: absolute
-}
-.note{
-  z-index: 1;
+.device{
+  background-color: rgb(63, 199, 253);
+  padding-bottom: 50px;
+  
 }
 
+.home-device{
+  padding-top: 80px;
+  text-align: center;
+  padding-bottom: 80px;
+}
+
+.adult{
+  background-color: rgb(14, 165, 90);
+  padding-bottom: 175px;
+}
+.list{
+  margin-top: 100px;
+  padding-top:100px;
+  padding-left: 90px;
+}
+.ul{
+  width:85%; 
+    padding: 0 0 2px;
+    margin: 20px;
+    text-align: left;
+    color: white
+
+}
+.phone{
+  position: absolute;
+  
+  padding-top: 93px;
+  height:auto;
+  width: 25%;
+  right: 250px;
+
+}
+
+.hub{
+  position: absolute;
+  padding-top: 93px;
+  width: 40%;
+  height:auto;
+  padding-right: 40px;
+}
+
+.setup{
+  width: 100%;
+padding-bottom: 180px;
+background-color: white;}
+
+
+
+.signup{
+ 
+  color: white;
+}
+
+
+.form-inline{
+  text-align: center !important;
+  background-color: rgb(36, 35, 35);
+}
 
 
 
