--- a/css/securly.css
+++ b/css/securly.css
@@ -1,7 +1,4 @@
-body, html {
-  height: 100%;
-  margin: 0;
-}
+
 
 .navbar{
  background-color:white !important;
@@ -32,9 +29,21 @@ border-radius: 25px !important;
   color: black!important;
 }
 
+@media only screen and (max-width: 750px) {
+  .line {
+    display: none;
+  }
+}
+
 .login{
   margin-bottom: 10px;
   
+}
+
+@media only screen and (max-width: 750px) {
+  .login {
+    margin-top:30px;
+  }
 }
 h2{
   padding-top: 30px;
@@ -57,6 +66,11 @@ font-family: 'Roboto Slab', serif;
     font-size: 3.1vw;
     font-family: 'Roboto Slab', serif;  
 }
+@media only screen and (max-width: 990px) {
+  .main {
+    font-weight: 500;
+  }
+}
 .kids-device{
   color: white;
   font-size: 1.5vw;
@@ -64,8 +78,8 @@ font-family: 'Roboto Slab', serif;
 .header{
   padding-top: 50px;
   padding-left: 70px;
-  padding-bottom: 150px;
 }
+
 
 .login{
   width: 20%;
@@ -77,11 +91,75 @@ font-family: 'Roboto Slab', serif;
 .view{  
 position: absolute;
 
-  padding-top: 10px;
+  padding-top: 8px;
   height:auto;
   width: 40%;
   right: 120px;
+
 }
+@media only screen and (min-width: 1302px) {
+  .view {
+    height: 81.5%;
+    width: 38%;
+  }
+}
+@media only screen and (min-width: 1522px) {
+  .view {
+    height: 83%;
+    width: 35%;
+  }
+}
+
+@media only screen and (min-width: 1598px) {
+  .view {
+    height: 84.5%;
+    width: 33%;
+  }
+}
+
+@media only screen and (min-width: 1645px) {
+  .view {
+    height: 85.5%;
+    width: 32%;
+  }
+}
+
+@media only screen and (max-width: 1302px) {
+  .view {
+    padding-top: 15px;
+  }
+}
+
+@media only screen and (max-width: 1190px) {
+  .view {
+    padding-top: 45px;
+  }
+}
+
+@media only screen and (max-width: 1058px) {
+  .view {
+    padding-top: 75px;
+  }
+}
+
+@media only screen and (max-width: 990px) {
+  .view {
+    padding-top: 88px;
+  }
+}
+@media only screen and (max-width: 850px) {
+  .view {
+    padding-top: 120px;
+  }
+}
+
+
+@media only screen and (max-width: 750px) {
+  .view {
+    display: none;
+  }
+}
+
 
 .home-secure{
   position: absolute;
@@ -90,6 +168,24 @@ position: absolute;
   max-height:auto;
   width: 40%;
   right: 240px; 
+}
+@media only screen and (min-width: 1645px) {
+  .home-secure {
+  right: 200px;
+  }
+}
+
+
+@media only screen and (max-width: 990px) {
+  .home-secure{
+    right: 130px;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .home-secure{
+    right: 30px;
+  }
 }
 
 .security{
@@ -105,6 +201,37 @@ position: absolute;
   color: black !important;
   background-color: white !important;
 }
+
+@media only screen and (max-width: 448px) {
+  .iphone-btns{
+    padding-left: 40px;
+    padding-right: 70px;
+
+    
+
+  
+}
+}
+
+@media only screen and (max-width: 350px) {
+  .phone-app{
+    margin-top:10px;
+    
+
+  
+}
+}
+
+@media only screen and (max-width: 450px) {
+  .maintain{
+  font-size: 30px;
+    
+
+  
+}
+}
+
+
 
 .buy{
   border-radius: 25px ;
@@ -151,9 +278,22 @@ position: absolute;
   padding-bottom: 40px;
 }
 
+@media only screen and (max-width: 750px) {
+  .home-device{
+    padding-top: 40px;
+    padding-bottom: 20px;
+  }
+}
+
 .phone{
   width: 100%;
     height: auto;
+}
+
+@media only screen and (max-width: 750px) {
+  .phone {
+    display: none;
+  }
 }
 
 .adult{
@@ -161,11 +301,31 @@ position: absolute;
   background-color: rgb(14, 165, 90);
   
 }
+
+
 .list{
   margin-top: 100px;
   padding-top:50px;
   padding-left: 90px;
   
+}
+
+@media only screen and (max-width: 990px) {
+  .list{
+margin-top: 0px;
+  }
+  
+}
+
+@media only screen and (max-width: 850px) {
+  .list {
+    padding-top: 0px;
+  }
+}
+@media only screen and (max-width: 750px) {
+  .list {
+   padding-bottom: 45px;
+  }
 }
 .ul{
   width:85%; 
@@ -213,6 +373,23 @@ background-color: white;}
   width: 100%;
   background-color: rgb(36, 35, 35);
 }
+
+.form-inline{
+width: 670px!important;
+margin: 0 auto;
+}
+@media only screen and (max-width: 750px) {
+  .form-inline{
+ width: 300px!important;
+  }
+  
+}
+
+@media only screen and (max-width: 750px) {
+  .signup{
+text-align: center;
+  }
+}
 .form{
   text-align: center;
   margin: 0auto;
@@ -255,6 +432,21 @@ input{
   background-color: rgb(111, 250, 236);
 }
 
+@media only screen and (max-width: 750px) {
+  .home-image{
+   display: none;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .trials{
+   text-align: center;
+   padding-bottom: 70px;
+  }
+}
+
+
+
 .contact{
 
   width: 100%;
@@ -270,6 +462,13 @@ input{
   display: table-cell;
   color: white;
 
+}
+
+@media only screen and (max-width: 595px) {
+  .news{
+ display: none;
+  }
+  
 }
 
 .foot{
@@ -309,6 +508,7 @@ padding: 10px;
 .media{
   width: 100%;
   display: table;
+  float: left;
 }
 .social{
   display: table-cell;
@@ -318,4 +518,62 @@ padding: 10px;
 .location{
   float: right;
   list-style-type: none;
+}
+
+@media only screen and (max-width: 990px) {
+  .location{
+ font-size:12px;
+  }
+  
+}
+
+@media only screen and (max-width: 990px) {
+  #call{
+ font-size:12px;
+  }
+  
+}
+
+@media only screen and (max-width: 750px) {
+  .left{
+    padding-top: 10px;
+ padding-left: 100px;
+  }
+  
+}
+
+@media only screen and (max-width: 990px) {
+  #email{
+ font-size:12px;
+  }
+  
+}
+
+@media only screen and (max-width: 990px) {
+  .media{
+ display: none;
+  }
+  
+}
+@media only screen and (max-width: 990px) {
+  .location{
+ display: none;
+  }
+  
+}
+
+
+@media only screen and (max-width: 580px) {
+  .head{
+ font-size: 30px;
+  }
+  
+}
+
+@media only screen and (max-width: 448px) {
+  .middle{
+ text-align: center;
+ width: 90%;
+  }
+  
 }
