--- a/css/securly.css
+++ b/css/securly.css
@@ -1,3 +1,6 @@
+body{
+  width: 100%;
+}
 .navbar{
   background-color:white !important;
   padding-left: 30px;
@@ -74,8 +77,11 @@
    font-size: 1.5vw;
  }
  .header{
-   padding-top: 50px;
-   padding-left: 70px;
+  
+   position: relative;
+   height:100%;
+   padding-bottom:300px;
+    background-color: rgb(116, 113, 113);
  }
  
  
@@ -88,68 +94,11 @@
  }
  .view{  
  position: absolute;
-  padding-top: 80px;
+  padding-bottom:0;
   height:auto;
-   width: 40%;
-   right: 120px;
+  right: 200px;
  
  }
- 
- @media only screen and (min-width: 1302px) {
-   .view {
-     
-     width: 38%;
-   }
- }
- @media only screen and (min-width: 1522px) {
-   .view {
-     padding-top:95px;
-     width: 35%;
-   }
- }
- 
- @media only screen and (min-width: 1709px) {
-   .view {
-    padding-top:150px;
-     width: 33%;
-   }
- }
- 
- @media only screen and (min-width: 1645px) {
-   .view {
-     
-     width: 32%;
-   }
- }
- 
- 
- 
- @media only screen and (max-width: 1210px) {
-   .view {
-     padding-top: 90px;
-   }
- }
- 
- @media only screen and (max-width: 1086px) {
-   .view {
-     padding-top: 120px;
-   }
- }
- 
- @media only screen and (max-width: 901px) {
-   .view {
-     padding-top: 160px;
-   }
- }
- 
- 
- @media only screen and (max-width: 750px) {
-   .view {
-     display: none;
-   }
- }
- 
- 
  .home-secure{
    position: absolute;
  
@@ -249,12 +198,11 @@
    font-size: 40px;
    
  }
- .header{
-   padding-bottom: 230px;
-   background-color: rgb(116, 113, 113);
+ 
+
   
   
- }
+ 
  .device{
    background-color: rgb(63, 199, 253);
    padding-bottom: 90px;
